Name:                polygod
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Author
Maintainer:          maintainer@example.com
Stability:           Experimental
Category:            Web
Build-type:          Custom
Cabal-version:       >=1.2

Executable polygod
  hs-source-dirs: src, test
  main-is: Main.hs

  Build-depends:
    base >= 4,
    haskell98,
    monads-fd >= 0.1 && <0.2,
    bytestring >= 0.9.1 && <0.10,
    array >= 0.3 && <0.4,
    stm >= 2.1.2 && <3,
    snap-core >= 0.2 && <0.3,
    snap-server >= 0.2 && <0.3,
    xhtml-combinators,
    blaze-html >= 0.1.2 && < 0.2,
    JSONb >= 1.0.2 && < 1.1,
    bytestring-trie >= 0.1.4 && < 0.2,
    uuid >= 1.2.1 && < 2,
    test-framework >= 0.3.2 && < 0.4,
    test-framework-quickcheck2 >= 0.2.6 && < 0.3,
    test-framework-hunit >= 0.2.6 && < 0.3,
    QuickCheck >= 2.1 && < 3,
    HUnit >= 1.2 && < 3,
    unix,
    text,
    time >= 1.1.4 && < 2,
    containers,
    MonadCatchIO-transformers,
    filepath >= 1.1 && <1.2

  extensions: BangPatterns, OverloadedStrings

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

